fix navigation on mobile

--- a/src/css/_breakpoints.scss
+++ b/src/css/_breakpoints.scss
@@ -28,3 +28,7 @@ $bp-large-desktop-only: $bp-large-desktop;
 
 // Combined
 $bp-mobile-tablet: $bp-mobile-min $bp-tablet-max;
+
+:root {
+    --bp-tablet: #{$bp-tablet};
+}
